add signal generator